CSS: fixed overlapping search box and close button

--- a/computer.css
+++ b/computer.css
@@ -36,6 +36,7 @@ div#wayf > div.top {
 #wayf .toptitle {
     color: #666666;
     font-weight: normal;
+    width: 95%;
 }
 
 #wayf .content {
